tests/examples/good/garbage_collector/good001.lat
int main() {
    {
        A a = new A;
        A b = a;
    }
    return 0;
}

class A {
    int a;
    int b;
    string s;
}