tests/examples/bad/inheritance_field_type_mismatch.lat
int main() {
    return 1;
}

class A {
    int a;
}


class B extends A {
    bool a;
}